# pyjsonls

./: README.md  pyproject.toml
data/: sample.json
src/: main.py  pyls.py
src/pyls/: pyls.py
tests/: my_test.py
