[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjsonls"
version = "0.2.0"
authors = [
  { name="Daniele S.", email="daniele.stirp@gmail.com" }
]
description = "This program takes a json file representing a directory and prints out its content in the console in the style of ls"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyjsonls = "pyjsonls.pyjsonls:main"

[project.urls]
Homepage = "https://github.com/wise-daniele/pyjsonls"
Issues = "https://github.com/wise-daniele/pyjsonls/issues"